--- a/loyer/style/style2.css
+++ b/loyer/style/style2.css
@@ -7,10 +7,12 @@ body{
     height: 100vh;
 }
 .contener{
-    width: 21%;
-    height: 300px;
+    /* width: 21%;
+    height: 300px; */
+    width: 100%;
+    height: 100%;
     border: 1px solid black;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     /* margin-left: 70px; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -61,23 +63,42 @@ h2{
 }
 .morebtn{
     padding: 10px 20px;
-    /* background-color: rgb(19, 53, 190);
-    color: white;
-    font-weight: bold; */
+    
     border: 0px ;
     border-radius: 5px;
-    border: 1px solid rgb(19, 53, 190) ;
-    color: rgb(19, 53, 190);
+    border: 1px solid #0e649d ;
+    color: #0e649d;
     background-color: white;
     transition: 1s;
 
 }
 .morebtn:hover{
-    background-color:rgb(19, 53, 190) ;
-    color: white;
+    background-color:#0b4e7a;
+    color: rgb(255, 255, 255);
 }
 /* this is the css of the main page befor login */
 
+.thecon{
+    text-decoration: none;
+    /* border: 2px solid  #0e649d ;  */
+    /* padding: 5px 20px;  */
+    width: min-content;
+    color: black;
+    width: 21%;
+    height: 300px;
+    margin-bottom: 30px;
+    transition: 1s;
+    
+    
+}
+.thecon:hover{
+    
+    background-color: #f5f3f3;
+    color: black;
+    transform: scale(1.1);
+    border: 0px;
+    
+}
 
 
 
