--- a/loyer/the2pages/style2.css
+++ b/loyer/the2pages/style2.css
@@ -129,6 +129,7 @@ header{
 .profileimg{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 
 }
 #publierbtn{
@@ -168,6 +169,10 @@ header{
     border: 0px;
 
 }
-
+.Nores{
+    color: rgba(198, 197, 197, 0.621);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 3em;
+}
 
 
