--- a/loyer/style/profilestyle.css
+++ b/loyer/style/profilestyle.css
@@ -58,8 +58,10 @@ body{
     justify-content: center;
     align-items: center;
     padding-top: 40px;
+    padding-bottom: 40px;
     background-color: rgb(249, 249, 249);
 }
 .profile button:hover{
     background-color:#125481 ;
 }
+
