--- a/loyer/style/style4.css
+++ b/loyer/style/style4.css
@@ -5,6 +5,7 @@
 }
 body{
     height: 100vh;
+    
 }
 .contener{
     /* width: 21%;
@@ -34,10 +35,13 @@ img{
 }
 article{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
+    flex-direction: column;
+    padding: 40px;
     justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    width: 60%;
+   
     
     
 }
@@ -84,7 +88,7 @@ h2{
     /* padding: 5px 20px;  */
     width: min-content;
     color: black;
-    width: 21%;
+    width: 37%;
     height: 300px;
     margin-bottom: 30px;
     transition: 1s;
@@ -95,35 +99,34 @@ h2{
     
     background-color: #f5f3f3;
     color: black;
-    transform: scale(1.1);
+    
     border: 0px;
     
 }
-.pofthemainofachraf span{
-    font-weight: bold;
-    font-size: 1.2em;
+.deleteProduct{
+     background-color: rgb(206, 39, 39);
+     padding: 5px 20px;
+     border-radius: 5px;
+     border: 0px;
+     color: white;
+     font-weight:bold ;
+     transition: 1s;
+     margin-bottom: 20px;
 }
-
-@media (max-width:1170px){
-    .thecon{
-        width: 30% !important;
-    }
-
+.deleteProduct:hover{
+    background-color: rgb(184, 37, 37);
+    transform: scale(1.1);
 }
-@media (max-width:900px){
-    .thecon{
-        width: 40% !important;
-    }
-
-}
-@media (max-width:600px){
-    .thecon{
-        width: 80% !important;
-        
-    }
+.mydiv{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(238, 238, 238, 0.986);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    min-height: 85vh;
     
-
 }
-
 
 
